fixed gap between thumbnails and cleaned part of code

--- a/PRIMA PAGINA/secondPage.css
+++ b/PRIMA PAGINA/secondPage.css
@@ -2,57 +2,79 @@
     width: 120px;
 }
 
-.content {
+.image-container {
+    position: relative;
+}
+
+.image-container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-
+    height: 100%;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
 }
 
-.imgTitle {
-
-   width: 100%;
-   height: 100%;
-    object-fit: cover;   
+.image-container:hover::after {
+    background-color: rgba(0, 0, 0, 0.3);
 }
-.imgtitle-left{
-    border-top-left-radius:10px;
+
+.imgtitle-left {
+    border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
-.imgtitle-bordertop{
+
+.imgtitle-bordertop {
     border-top-right-radius: 10px;
 }
-.imgtitle-borderbottom{
+
+.imgtitle-borderbottom {
     border-bottom-right-radius: 10px;
 }
-.host1{
+
+.thumbnails-main-container {
+    max-width: 800px;
+}
+
+.host1 {
 
     width: 50px;
     overflow: hidden;
 }
+
 .host {
     object-fit: contain;
     width: 30px;
-
 }
-.calendar{
+
+.calendar {
     max-width: 75%;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid white;
 }
-.header{
+
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
 }
-#calendar-table{
+
+#calendar-table {
     width: 100%;
 }
-#calendar-table th, #calendar-table td{
+
+#calendar-table th,
+#calendar-table td {
     padding: 10px;
     text-align: center;
 }
-#prev-btn, #next-btn{
+
+#prev-btn,
+#next-btn {
     background-color: none;
     color: white;
     border: none;
@@ -60,19 +82,22 @@
     cursor: pointer;
 
 }
-#month-year{
+
+#month-year {
     font-size: 18px;
     font-weight: bold;
-    
+
 }
-thead tr{
+
+thead tr {
     padding: 20ox;
     margin: 20px;
 }
 
-.recention{
+.recention {
     font-size: 100px;
 }
-.img1{
+
+.img1 {
     width: 100px;
 }
